log/build_2025-01-24_10-00-02/robot_control/stderr.log
  File "/home/mo/Thesis/install/robot_control/lib/python3.8/site-packages/robot_control/pbvs_2d.py", line 161
    self.act_tip_pos = self.hooks_dict[key]['uv_tip'] if self.hooks_dict != {}
                                                                             ^
SyntaxError: invalid syntax

